# MediaHandle

./: CMakeLists.txt  README.md  crt.py  db.h  log.h  media_server.cc  task_manager.h  taskinfo.proto
client/: close.py  del.py
inc/algorithm/: IA_typedef.h
odb/: generate.sh  result.hxx  task.hxx
proto/: generate.sh
src/: media_algorithm.h  media_element.h  media_process.h  media_task.h  media_type.h  singleton.h  type.h
thrift/: generate_code.py  media_server.thrift
